# StudyAssitantAgent

./: .cursorrules  AGENTS.md  INTERLEAVING_REFERENCE.md  LICENSE  README.md  main.py  pyproject.toml  scratch_pdf_text.txt
agent/: agent.py  state.py
docs/: ticktick-api-reference.md
scratch/: read_pdf.py
strategy/: interleaving_method.py  type_interleaving.py
