[project]
name = "studyassitantagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
